--- a/components/404.css
+++ b/components/404.css
@@ -8,6 +8,7 @@ body {
     background-color: #f8f8f8;
     text-align: center;
     font-family: Roboto, Helvetica, sans-serif;
+    overflow: hidden; /* Evita o scroll desnecessário */
 }
 
 h1 {
