--- a/components/404.html
+++ b/components/404.html
@@ -7,8 +7,8 @@
     <title>404 - Página Não Encontrada</title>
 </head>
 <body>
-    <h1>404 - Página Não Encontrada</h1>
+    <h1>Oops! Algo deu errado...</h1>
     <img src="/Assets/Erro/404.gif" alt="Erro 404">
-    <p>404 - Página Não Encontrada</p>
+    <p>Parece que você se perdeu. Não se preocupe, Volte para a <a href="/index.html">página inicial</a></p>
 </body>
 </html>
