--- a/styles.css
+++ b/styles.css
@@ -127,3 +127,8 @@ input:focus {
 .login-network a:hover {
     background-color: #4a90e2;
 }
+
+a {
+    text-decoration: none;
+    color: #ffffff;
+}
