--- a/components/404.html
+++ b/components/404.html
@@ -1,14 +1,17 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/components/404.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/components/404.css" />
     <title>404 - Página Não Encontrada</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>Oops! Algo deu errado...</h1>
-    <img src="/Assets/Erro/404.gif" alt="Erro 404">
-    <p>Parece que você se perdeu. Não se preocupe, Volte para a <a href="/index.html">página inicial</a></p>
-</body>
+    <img src="/Assets/Erro/404.gif" alt="Erro 404" />
+    <p>
+      Parece que você se perdeu. Não se preocupe, Volte para a
+      <a href="/index.html">página inicial</a>
+    </p>
+  </body>
 </html>
