--- a/components/404.css
+++ b/components/404.css
@@ -17,7 +17,7 @@ h1 {
   font-weight: 700; /* Torna o título mais robusto */
   margin-bottom: 1rem;
   color: #2c3e50; /* Cor mais sofisticada */
-  text-shadow: 1px 1px 5px rgba(0, 0, 0, 0.1); /* Sombra suave */
+  text-shadow: 1px 1px 5px rgb(0 0 0 / 0.1); /* Sombra suave */
 }
 
 img {
@@ -25,7 +25,7 @@ img {
   height: auto;
   margin-bottom: 1rem;
   border-radius: 8px; /* Bordas arredondadas para um toque mais moderno */
-  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1); /* Sombra para destaque */
+  box-shadow: 0 5px 15px rgb(0 0 0 / 0.1); /* Sombra para destaque */
   transition: transform 0.3s ease; /* Transição suave para interações */
 }
 
